--- a/tops.html
+++ b/tops.html
@@ -6,12 +6,24 @@
   <title>Tops - Korvi Clothing</title>
   <link rel="stylesheet" href="style.css" />
   <style>
+    body {
+      background-color: black;
+      color: white;
+      margin: 0;
+      font-family: sans-serif;
+    }
+
+    .nav {
+      padding: 20px;
+    }
+
     .nav a {
       margin-right: 10px;
       text-decoration: none;
-      color: black;
+      color: white;
       font-weight: bold;
     }
+
     .products {
       display: flex;
       flex-wrap: wrap;
@@ -19,32 +31,41 @@
       justify-content: center;
       padding: 20px;
     }
+
     .product {
       text-align: center;
     }
+
     .product img {
       width: 200px;
       height: auto;
       border-radius: 10px;
     }
+
     .arrow {
       display: inline-block;
       font-size: 24px;
       cursor: pointer;
       margin-top: 5px;
+      color: white;
+    }
+
+    h1 {
+      text-align: center;
+      color: white;
     }
   </style>
 </head>
 <body>
   <header>
     <div class="nav">
-      <a href="index.html">Home</a>
-      <a href="tops.html" class="active">Tops</a>
+      <a href="index.html" class="active">Home</a>
+      <a href="tops.html">Tops</a>
     </div>
   </header>
 
   <main>
-    <h1 style="text-align:center;">Our Top Collection</h1>
+    <h1>Our Top Collection</h1>
     <div class="products">
 
       <div class="product">
